[project]
name = "knowledge-base-lance-search"
version = "0.1.0"
description = "Local LanceDB semantic search tooling for the Obsidian knowledge base"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cryptography>=46,<47",
    "lance-namespace==0.3.2",
    "lance-namespace-urllib3-client==0.3.2",
    "lancedb>=0.29,<0.30",
    "numpy>=2.4,<2.5",
    "pyarrow>=23,<24",
    "pypdf>=6.12,<7",
    "sentence-transformers>=5.2,<5.3",
    "transformers>=5.3,<5.4",
]

[project.scripts]
lance-reindex = "lance_search.cli:reindex_main"
search = "lance_search.cli:search_main"
lance-pdf-to-md = "lance_search.cli:pdf_to_md_main"
lance-doctor = "lance_search.cli:doctor_main"
lance-search = "lance_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lance_search"]
